--- a/src/main/resources/views/CategoriaMantenim.fxml
+++ b/src/main/resources/views/CategoriaMantenim.fxml
@@ -12,7 +12,8 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="300.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CategoriaMantenimController">
+<AnchorPane prefHeight="300.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/23.0.1" 
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CategoriaMantenimController">
 
     <children>
         <!-- Título -->
